istio/3.virtual-service/echo-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
  labels:
    app: echo-v1
spec:
  selector:
    matchLabels:
      app: echo-v1
  template:
    metadata:
      labels:
        app: echo-v1
    spec:
      containers:
        - name: echo-v1
          image: jxlwqq/http-echo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          args:
            - "--text=v1"
