istio/3.virtual-service/echo-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-v2
  name: echo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-v2
  template:
    metadata:
      labels:
        app: echo-v2
    spec:
      containers:
        - name: echo-v2
          image: jxlwqq/http-echo
          ports:
            - containerPort: 8080
          args:
            - "--text=v2"
