istio/3.virtual-service/echo-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  labels:
    app: echo-v1
spec:
  selector:
    app: echo-v1
  ports:
    - port: 8080
      protocol: TCP
      name: http
