istio/3.virtual-service/echo-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
  labels:
    app: echo-v2
spec:
  selector:
    app: echo-v2
  ports:
    - port: 8080
      protocol: TCP
      name: http
