istio/3.virtual-service/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  selector:
    app: httpd
  ports:
    - port: 80
