istio/3.virtual-service/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: http-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - route:
        - destination:
            host: nginx
            port:
              number: 80
          weight: 80
        - destination:
            host: httpd
            port:
              number: 80
          weight: 20
